# fruit-machine

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
app/: CMakeLists.txt  introduction.h  main.cpp
io/: CMakeLists.txt
io/include/: logging.h
io/src/: logging.cpp
